@@ -138,18 +138,16 @@ abstract class CHostGeneral extends CZBXAPI {
 	/**
 	 * Links the templates to the given hosts.
 	 *
-	 * @param array $templateids
-	 * @param array $targetids		an array of host IDs to link the templates to
-	 *
-	 * @return bool
+	 * @param array $templateIds
+	 * @param array $targetIds		an array of host IDs to link the templates to
 	 */
-	protected function link(array $templateids, array $targetids) {
-		if (empty($templateids)) {
+	protected function link(array $templateIds, array $targetIds) {
+		if (empty($templateIds)) {
 			return;
 		}
 
 		// check if someone passed duplicate templates in the same query
-		$templateIdDuplicates = zbx_arrayFindDuplicates($templateids);
+		$templateIdDuplicates = zbx_arrayFindDuplicates($templateIds);
 		if (!zbx_empty($templateIdDuplicates)) {
 			$duplicatesFound = array();
 			foreach ($templateIdDuplicates as $value => $count) {
@@ -162,28 +160,46 @@ abstract class CHostGeneral extends CZBXAPI {
 		}
 
 		// check if any templates linked to targets have more than one unique item key/application
-		foreach ($targetids as $targetid) {
+		foreach ($targetIds as $targetId) {
 			$linkedTpls = API::Template()->get(array(
 				'nopermissions' => true,
 				'output' => array('templateid'),
-				'hostids' => $targetid
+				'hostids' => $targetId
 			));
 
-			$templateIdsAll = array_merge($templateids, zbx_objectValues($linkedTpls, 'templateid'));
+			$templateIdsAll = array_merge($templateIds, zbx_objectValues($linkedTpls, 'templateid'));
 
 			$dbItems = DBselect(
-				'SELECT i.key_'.
+				'SELECT i.key_,i.flags'.
 				' FROM items i'.
 				' WHERE '.dbConditionInt('i.hostid', $templateIdsAll).
 				' GROUP BY i.key_'.
 				' HAVING COUNT(i.itemid)>1'
 			);
+
 			if ($dbItem = DBfetch($dbItems)) {
-				$dbItemHost = API::Item()->get(array(
-					'output' => array('hostid'),
-					'filter' => array('key_' => $dbItem['key_']),
-					'templateids' => $templateIdsAll
-				));
+				if ($dbItem['flags'] == ZBX_FLAG_DISCOVERY_NORMAL) {
+					$dbItemHost = API::Item()->get(array(
+						'output' => array('hostid'),
+						'filter' => array('key_' => $dbItem['key_']),
+						'templateids' => $templateIdsAll
+					));
+				}
+				elseif ($dbItem['flags'] == ZBX_FLAG_DISCOVERY) {
+					$dbItemHost = API::DiscoveryRule()->get(array(
+						'output' => array('hostid'),
+						'filter' => array('key_' => $dbItem['key_']),
+						'templateids' => $templateIdsAll
+					));
+				}
+				else {
+					$dbItemHost = API::ItemPrototype()->get(array(
+						'output' => array('hostid'),
+						'filter' => array('key_' => $dbItem['key_']),
+						'templateids' => $templateIdsAll
+					));
+				}
+
 				$dbItemHost = reset($dbItemHost);
 
 				$template = API::Template()->get(array(
@@ -200,7 +216,7 @@ abstract class CHostGeneral extends CZBXAPI {
 		}
 
 		// get DB templates which exists in all targets
-		$res = DBselect('SELECT * FROM hosts_templates WHERE '.dbConditionInt('hostid', $targetids));
+		$res = DBselect('SELECT * FROM hosts_templates WHERE '.dbConditionInt('hostid', $targetIds));
 		$mas = array();
 		while ($row = DBfetch($res)) {
 			if (!isset($mas[$row['templateid']])) {
@@ -208,7 +224,7 @@ abstract class CHostGeneral extends CZBXAPI {
 			}
 			$mas[$row['templateid']][$row['hostid']] = 1;
 		}
-		$targetIdCount = count($targetids);
+		$targetIdCount = count($targetIds);
 		$commonDBTemplateIds = array();
 		foreach ($mas as $templateId => $targetList) {
 			if (count($targetList) == $targetIdCount) {
@@ -217,27 +233,27 @@ abstract class CHostGeneral extends CZBXAPI {
 		}
 
 		// check if there are any template with triggers which depends on triggers in templates which will be not linked
-		$commonTemplateIds = array_unique(array_merge($commonDBTemplateIds, $templateids));
-		foreach ($templateids as $templateid) {
-			$triggerids = array();
-			$dbTriggers = get_triggers_by_hostid($templateid);
+		$commonTemplateIds = array_unique(array_merge($commonDBTemplateIds, $templateIds));
+		foreach ($templateIds as $templateId) {
+			$triggerIds = array();
+			$dbTriggers = get_triggers_by_hostid($templateId);
 			while ($trigger = DBfetch($dbTriggers)) {
-				$triggerids[$trigger['triggerid']] = $trigger['triggerid'];
+				$triggerIds[$trigger['triggerid']] = $trigger['triggerid'];
 			}
 
 			$sql = 'SELECT DISTINCT h.host'.
-				' FROM trigger_depends td,functions f,items i,hosts h'.
-				' WHERE ('.
-					dbConditionInt('td.triggerid_down', $triggerids).
-					' AND f.triggerid=td.triggerid_up'.
-				' )'.
-				' AND i.itemid=f.itemid'.
-				' AND h.hostid=i.hostid'.
-				' AND '.dbConditionInt('h.hostid', $commonTemplateIds, true).
-				' AND h.status='.HOST_STATUS_TEMPLATE;
+					' FROM trigger_depends td,functions f,items i,hosts h'.
+					' WHERE ('.
+						dbConditionInt('td.triggerid_down', $triggerIds).
+						' AND f.triggerid=td.triggerid_up'.
+					' )'.
+					' AND i.itemid=f.itemid'.
+					' AND h.hostid=i.hostid'.
+					' AND '.dbConditionInt('h.hostid', $commonTemplateIds, true).
+					' AND h.status='.HOST_STATUS_TEMPLATE;
 			if ($dbDepHost = DBfetch(DBselect($sql))) {
 				$tmpTpls = API::Template()->get(array(
-					'templateids' => $templateid,
+					'templateids' => $templateId,
 					'output'=> API_OUTPUT_EXTEND
 				));
 				$tmpTpl = reset($tmpTpls);
@@ -250,8 +266,8 @@ abstract class CHostGeneral extends CZBXAPI {
 		$res = DBselect(
 			'SELECT ht.hostid,ht.templateid'.
 			' FROM hosts_templates ht'.
-			' WHERE '.dbConditionInt('ht.hostid', $targetids).
-				' AND '.dbConditionInt('ht.templateid', $templateids)
+			' WHERE '.dbConditionInt('ht.hostid', $targetIds).
+				' AND '.dbConditionInt('ht.templateid', $templateIds)
 		);
 		$linked = array();
 		while ($row = DBfetch($res)) {
@@ -263,27 +279,27 @@ abstract class CHostGeneral extends CZBXAPI {
 
 		// add template linkages, if problems rollback later
 		$hostsLinkageInserts = array();
-		foreach ($targetids as $targetid) {
-			foreach ($templateids as $templateid) {
-				if (isset($linked[$targetid]) && isset($linked[$targetid][$templateid])) {
+		foreach ($targetIds as $targetId) {
+			foreach ($templateIds as $templateId) {
+				if (isset($linked[$targetId]) && isset($linked[$targetId][$templateId])) {
 					continue;
 				}
-				$hostsLinkageInserts[] = array('hostid' => $targetid, 'templateid' => $templateid);
+				$hostsLinkageInserts[] = array('hostid' => $targetId, 'templateid' => $templateId);
 			}
 		}
 		DB::insert('hosts_templates', $hostsLinkageInserts);
 
 		// check if all trigger templates are linked to host.
-		// we try to find template that is not linked to hosts ($targetids)
-		// and exists trigger which reference that template and template from ($templateids)
+		// we try to find template that is not linked to hosts ($targetIds)
+		// and exists trigger which reference that template and template from ($templateIds)
 		$sql = 'SELECT DISTINCT h.host'.
 				' FROM functions f,items i,triggers t,hosts h'.
 				' WHERE f.itemid=i.itemid'.
 					' AND f.triggerid=t.triggerid'.
 					' AND i.hostid=h.hostid'.
 					' AND h.status='.HOST_STATUS_TEMPLATE.
-					' AND NOT EXISTS (SELECT 1 FROM hosts_templates ht WHERE ht.templateid=i.hostid AND '.dbConditionInt('ht.hostid', $targetids).')'.
-					' AND EXISTS (SELECT 1 FROM functions ff,items ii WHERE ff.itemid=ii.itemid AND ff.triggerid=t.triggerid AND '.dbConditionInt('ii.hostid', $templateids). ')';
+					' AND NOT EXISTS (SELECT 1 FROM hosts_templates ht WHERE ht.templateid=i.hostid AND '.dbConditionInt('ht.hostid', $targetIds).')'.
+					' AND EXISTS (SELECT 1 FROM functions ff,items ii WHERE ff.itemid=ii.itemid AND ff.triggerid=t.triggerid AND '.dbConditionInt('ii.hostid', $templateIds). ')';
 		if ($dbNotLinkedTpl = DBfetch(DBSelect($sql, 1))) {
 			self::exception(
 				ZBX_API_ERROR_PARAMETERS,
@@ -296,7 +312,7 @@ abstract class CHostGeneral extends CZBXAPI {
 			'SELECT ht.hostid,ht.templateid'.
 			' FROM hosts_templates ht,hosts h'.
 			' WHERE ht.hostid=h.hostid '.
-				' AND h.status IN('.HOST_STATUS_MONITORED.','.HOST_STATUS_NOT_MONITORED.','.HOST_STATUS_TEMPLATE.')'
+				' AND h.status IN ('.HOST_STATUS_MONITORED.','.HOST_STATUS_NOT_MONITORED.','.HOST_STATUS_TEMPLATE.')'
 		);
 
 		// build linkage graph and prepare list for $rootList generation
@@ -308,6 +324,7 @@ abstract class CHostGeneral extends CZBXAPI {
 			if (!isset($graph[$row['hostid']])) {
 				$graph[$row['hostid']] = array();
 			}
+
 			$graph[$row['hostid']][] = $row['templateid'];
 			$hasParentList[$row['templateid']] = $row['templateid'];
 			$hasChildList[$row['hostid']] = $row['hostid'];
@@ -338,79 +355,79 @@ abstract class CHostGeneral extends CZBXAPI {
 		}
 
 		// permission check
-		if (!API::Host()->isWritable($targetids)) {
+		if (!API::Host()->isWritable($targetIds)) {
 			self::exception(ZBX_API_ERROR_PERMISSIONS, _('No permissions to referred object or it does not exist!'));
 		}
-		if (!API::Template()->isReadable($templateids)) {
+		if (!API::Template()->isReadable($templateIds)) {
 			self::exception(ZBX_API_ERROR_PERMISSIONS, _('No permissions to referred object or it does not exist!'));
 		}
 
 		$appManager = new CApplicationManager();
 		$httpTestManager = new CHttpTestManager();
 
-		foreach ($targetids as $targetid) {
-			foreach ($templateids as $templateid) {
-				if (isset($linked[$targetid]) && isset($linked[$targetid][$templateid])) {
+		foreach ($targetIds as $targetId) {
+			foreach ($templateIds as $templateId) {
+				if (isset($linked[$targetId]) && isset($linked[$targetId][$templateId])) {
 					continue;
 				}
 
-				$appManager->link($templateid, $targetid);
+				$appManager->link($templateId, $targetId);
 
 				API::DiscoveryRule()->syncTemplates(array(
-					'hostids' => $targetid,
-					'templateids' => $templateid
+					'hostids' => $targetId,
+					'templateids' => $templateId
 				));
 
 				API::Itemprototype()->syncTemplates(array(
-					'hostids' => $targetid,
-					'templateids' => $templateid
+					'hostids' => $targetId,
+					'templateids' => $templateId
 				));
 
 				API::Item()->syncTemplates(array(
-					'hostids' => $targetid,
-					'templateids' => $templateid
+					'hostids' => $targetId,
+					'templateids' => $templateId
 				));
 
-				$httpTestManager->link($templateid, $targetid);
+				$httpTestManager->link($templateId, $targetId);
 			}
 
 			// we do linkage in two separate loops because for triggers you need all items already created on host
-			foreach ($templateids as $templateid) {
-				if (isset($linked[$targetid]) && isset($linked[$targetid][$templateid])) {
+			foreach ($templateIds as $templateId) {
+				if (isset($linked[$targetId]) && isset($linked[$targetId][$templateId])) {
 					continue;
 				}
 
 				API::Trigger()->syncTemplates(array(
-					'hostids' => $targetid,
-					'templateids' => $templateid
+					'hostids' => $targetId,
+					'templateids' => $templateId
 				));
 
 				API::TriggerPrototype()->syncTemplates(array(
-					'hostids' => $targetid,
-					'templateids' => $templateid
+					'hostids' => $targetId,
+					'templateids' => $templateId
 				));
 
 				API::GraphPrototype()->syncTemplates(array(
-					'hostids' => $targetid,
-					'templateids' => $templateid
+					'hostids' => $targetId,
+					'templateids' => $templateId
 				));
 
 				API::Graph()->syncTemplates(array(
-					'hostids' => $targetid,
-					'templateids' => $templateid
+					'hostids' => $targetId,
+					'templateids' => $templateId
 				));
 			}
 		}
 
-		foreach ($targetids as $targetid) {
-			foreach ($templateids as $templateid) {
-				if (isset($linked[$targetid]) && isset($linked[$targetid][$templateid])) {
+		foreach ($targetIds as $targetId) {
+			foreach ($templateIds as $templateId) {
+				if (isset($linked[$targetId]) && isset($linked[$targetId][$templateId])) {
 					continue;
 				}
 
 				API::Trigger()->syncTemplateDependencies(array(
-					'templateids' => $templateid,
-					'hostids' => $targetid,
+					'templateids' => $templateId,
+					'hostids' => $targetId
 				));
 			}
 		}
@@ -420,18 +437,15 @@ abstract class CHostGeneral extends CZBXAPI {
 	 * Unlinks the templates from the given hosts. If $tragetids is set to null, the templates will be unlinked from
 	 * all hosts.
 	 *
-	 * @param $templateids
-	 * @param null|array $targetids the IDs of the hosts to unlink the templates from
-	 * @param bool $clear           delete all of the inherited objects from the hosts
-	 *
-	 * @return void
+	 * @param array      $templateids
+	 * @param null|array $targetids		the IDs of the hosts to unlink the templates from
+	 * @param bool       $clear			delete all of the inherited objects from the hosts
 	 */
 	protected function unlink($templateids, $targetids = null, $clear = false) {
 		$flags = ($clear)
 			? array(ZBX_FLAG_DISCOVERY_NORMAL, ZBX_FLAG_DISCOVERY)
 			: array(ZBX_FLAG_DISCOVERY_NORMAL, ZBX_FLAG_DISCOVERY, ZBX_FLAG_DISCOVERY_CHILD);
 
-		/* TRIGGERS {{{ */
 		// check that all triggers on templates that we unlink, don't have items from another templates
 		$sql = 'SELECT DISTINCT t.description'.
 			' FROM triggers t,functions f,items i'.
@@ -452,7 +466,6 @@ abstract class CHostGeneral extends CZBXAPI {
 				_s('Cannot unlink trigger "%s", it has items from template that is left linked to host.', $dbTrigger['description'])
 			);
 		}
-
 
 		$sqlFrom = ' triggers t,hosts h';
 		$sqlWhere = ' EXISTS ('.
@@ -525,8 +538,6 @@ abstract class CHostGeneral extends CZBXAPI {
 				}
 			}
 		}
-		/* }}} TRIGGERS */
-
 
 		/* ITEMS, DISCOVERY RULES {{{ */
 		$sqlFrom = ' items i1,items i2,hosts h';
@@ -571,7 +582,6 @@ abstract class CHostGeneral extends CZBXAPI {
 			}
 		}
 
-
 		if (!empty($items[ZBX_FLAG_DISCOVERY_NORMAL])) {
 			if ($clear) {
 				$result = API::Item()->delete(array_keys($items[ZBX_FLAG_DISCOVERY_NORMAL]), true);
@@ -588,7 +598,6 @@ abstract class CHostGeneral extends CZBXAPI {
 				}
 			}
 		}
-
 
 		if (!empty($items[ZBX_FLAG_DISCOVERY_CHILD])) {
 			if ($clear) {
@@ -607,7 +616,6 @@ abstract class CHostGeneral extends CZBXAPI {
 			}
 		}
 		/* }}} ITEMS, DISCOVERY RULES */
-
 
 		/* GRAPHS {{{ */
 		$sqlFrom = ' graphs g,hosts h';
@@ -659,7 +667,6 @@ abstract class CHostGeneral extends CZBXAPI {
 				}
 			}
 		}
-
 
 		if (!empty($graphs[ZBX_FLAG_DISCOVERY_NORMAL])) {
 			if ($clear) {
