@@ -18,6 +18,7 @@
 ** Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 **/
 
+
 /**
  * @package API
  */
@@ -35,7 +36,6 @@ class CItem extends CItemGeneral {
 			self::ERROR_EXISTS => _('Item "%1$s" already exists on "%2$s".')
 		));
 	}
-
 
 	/**
 	 * Get items data.
